<resources>
    <string name="app_name">Módulo Conteúdo</string>
    <string name="enter">Entrar</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_classes">Aulas</string>
    <string name="title_archives">Arquivos</string>
    <string name="title_tutorial">Tutorial</string>
    <string name="title_configuration">Configuração</string>
    <string name="login_inserirRa">Insira seu R.A.</string>
    <string name="logo_description">Logomarca do aplicativo. Contém três livros empilhados e uma nuvem ao fundo da imagem.</string>
    <string name="error_ra_not_found">O RA digitado não foi encontrado e/ou não é valido.</string>
    <string name="ok">OK!</string>
    <string name="week_1">Quinzenal 1</string>
    <string name="week_2">Quinzenal 2</string>
    <string name="next">Próximo</string>
    <string name="previous">Anterior</string>
    <string name="class_name">Nome da disciplina</string>
    <string name="classs">Sala</string>
    <string name="theory_teacher_name">Doscente teoria (se houver)</string>
    <string name="practice_teacher_name">Doscente prática (se houver)</string>
    <string name="campus">CAMPUS</string>
    <string name="sunday">Domingo</string>
    <string name="monday">Segunda-feira</string>
    <string name="tuesday">Terça-feira</string>
    <string name="wednesday">Quarta-feira</string>
    <string name="thursday">Quinta-feira</string>
    <string name="friday">Sexta-feira</string>
    <string name="saturday">Sábado</string>
    <string name="days">DIAS</string>
    <string name="santo_andre">Santo André</string>
    <string name="sao_bernardo">São Bernardo</string>
    <string name="type">Tipo</string>

    <string name="boldTitle">Negrito</string>
    <string name="colorTitle">Cores</string>
    <string name="fontsTitle">Tamanho das letras</string>
    <string name="highContrastTitle">Alto contraste</string>
    <string name="vibrateTitle">Vibração ao navegar</string>
    <string name="librasTitle">Botão Libras</string>

    <string name="sim">SIM</string>
    <string name="nao">NÃO</string>


    <string name="theory">Teoria</string>
    <string name="practice">Prática</string>
    <string name="general_info">INFORMAÇÕES GERAIS</string>
    <string name="day_info">INFORMAÇÕES SOBRE CADA DIA</string>
    <string name="save">Salvar</string>
    <string name="class_code">Código da disciplina</string>
    <string name="horario_inicio">Horário de início</string>
    <string name="horario_fim">Horário de término</string>
    <string name="as">às</string>
    <string name="is_empty_error">Campo não pode estar vazio.</string>
    <string name="example_text">example_text</string>
    <string name="example_text_value">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</string>
    <string name="config_negrito">Negrito</string>
    <string name="high_c_switch_value">Inversão de cores</string>
    <string name="config_big_text_value">Texto grande</string>
    <string name="vbr_in_touch">Vibrar ao tocar</string>
    <string name="inv_ra_btn_value">Entrar com outro RA</string>
    <string name="fab_btn_visibility">Visibilidade botão libras</string>
    <string name="title_add_class">Adicionar disciplina</string>
    <string name="tut_header_text">Como deseja acessar o tutorial?</string>
    <string name="tut_btn_video">Por vídeo com tradução em libras</string>
    <string name="tut_btn_slide">Por apresentação de imagens</string>
    <string name="content_description_tut_images">Imagem contendo imagens das telas do aplicativo.</string>
    <string name="tut_text_counter">1/0</string>
    <string name="tut_btn_exit">SAIR</string>

    <string name="texto_em_negrito">Texto em negrito</string>
    <string name="vibrar_ao_mudar_de_tela">Vibrar ao mudar de tela</string>
    <string name="ativar_o_bot_o_libras">Ativar o botão libras</string>
    <string name="tamanho_das_letras">Tamanho das letras</string>

    <string name="action_libras">Tradução para Libras</string>
    <string name="selecione_a_cor_do_fundo">Selecione a cor do fundo</string>
    <string name="selecione_a_cor_do_texto">Selecione a cor do texto</string>
    <string name="colors_title">Cores</string>
    <string name="default_text">Padrão</string>
    <string name="tema_de_alto_contraste">Tema de alto contraste?</string>
    <string name="exemplo">EXEMPLO</string>
    <string name="imagem_contendo_a_paleta_de_cores">Imagem contendo a paleta de cores</string>
    <string name="tamanho_da_fonte">Tamanho da fonte</string>
    <string name="padr_o">padrão</string>

    <string-array name="week_days">
        <item>@string/sunday</item>
        <item>@string/monday</item>
        <item>@string/tuesday</item>
        <item>@string/wednesday</item>
        <item>@string/thursday</item>
        <item>@string/friday</item>
        <item>@string/saturday</item>
    </string-array>
</resources>
