<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_classes">

    <fragment
        android:id="@+id/navigation_classes"
        android:name="com.ufabc.moduloconteudo.act_home.tabs.classes.ClassesFragment"
        android:label="@string/title_classes"
        tools:layout="@layout/fragment_classes" />

    <fragment
        android:id="@+id/navigation_archives"
        android:name="com.ufabc.moduloconteudo.act_home.tabs.archives.ArchivesFragment"
        android:label="@string/title_archives"
        tools:layout="@layout/fragment_archives" />

    <fragment
        android:id="@+id/navigation_tutorial"
        android:name="com.ufabc.moduloconteudo.act_home.tabs.tutorial.TutorialFragment"
        android:label="@string/title_tutorial"
        tools:layout="@layout/fragment_tutorial" />

    <fragment
        android:id="@+id/navigation_configuration"
        android:name="com.ufabc.moduloconteudo.act_home.tabs.configuration.ConfigurationFragment"
        android:label="@string/title_configuration"
        tools:layout="@layout/fragment_configuration" />

</navigation>