<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/tut_btn_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_imagebuttom"
            android:contentDescription="@string/previous"
            android:src="@drawable/ic_chevron_left_white_40dp" />

        <TextView
            android:id="@+id/tut_screen_shot_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="8dp"
            android:gravity="center|center_vertical"
            android:text="@string/tut_text_counter"
            android:textAlignment="center"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/tut_btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_imagebuttom"
            android:contentDescription="@string/next"
            android:src="@drawable/ic_chevron_right_white_40dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/tut_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/content_description_tut_images"
        app:layout_constraintBottom_toTopOf="@+id/tut_btn_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/tut_1" />

    <Button
        android:id="@+id/tut_btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tut_btn_exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>