<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddClassActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp" >

        <TextView
            android:id="@+id/add_tvInfoGerais"
            android:text="@string/general_info"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_tilClassCode"
            android:hint="@string/class_code"
            android:background="@color/colorWhite"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/add_tvInfoGerais"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_tietClassCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_tilClassName"
            android:background="@color/colorWhite"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/add_tilClassCode"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_tietClassName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/class_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_tilTTeacherName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorWhite"
            app:layout_constraintTop_toBottomOf="@+id/add_tilClassName"
            app:layout_constraintEnd_toEndOf="@+id/add_tilClassName"
            app:layout_constraintStart_toStartOf="@+id/add_tilClassName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_tietTTeacherName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/theory_teacher_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_tilPTeacherName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="@+id/add_tilTTeacherName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/add_tilTTeacherName"
            app:layout_constraintTop_toBottomOf="@+id/add_tilTTeacherName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_tietPTeacherName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/practice_teacher_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <View
            android:id="@+id/div_campus"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/add_tilPTeacherName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/add_tvCampus"
            android:text="@string/campus"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/div_campus"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <RadioGroup
            android:id="@+id/add_rgCampus"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_tvCampus"
            app:layout_constraintEnd_toEndOf="parent">

            <RadioButton
                android:id="@+id/add_rbSantoAndre"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/santo_andre" />

            <RadioButton
                android:id="@+id/add_rbSaoBernardo"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sao_bernardo" />
        </RadioGroup>

        <View
            android:id="@+id/div_days"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/add_rgCampus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/add_tvDays"
            android:text="@string/days"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/div_days"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <LinearLayout
            android:id="@+id/add_llDays"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/add_tvDays"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/add_cbMonday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monday" />

                <CheckBox
                    android:id="@+id/add_cbTuesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday" />

                <CheckBox
                    android:id="@+id/add_cbWednesday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wednesday" />
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/add_cbThursday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thursday"/>

                <CheckBox
                    android:id="@+id/add_cbFriday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friday"/>

                <CheckBox
                    android:id="@+id/add_cbSaturday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saturday"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/div_info_days"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/add_llDays"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <LinearLayout
            android:id="@+id/add_llInfoDays"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/div_info_days">

            <TextView
                android:id="@+id/add_tvInfoDias"
                android:text="@string/day_info"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" />


            <include layout="@layout/piece_add_monday"
                android:id="@+id/add_includeMonday"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <include layout="@layout/piece_add_tuesday"
                android:id="@+id/add_includeTuesday"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <include layout="@layout/piece_add_wednesday"
                android:id="@+id/add_includeWednesday"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <include layout="@layout/piece_add_thursday"
                android:id="@+id/add_includeThursday"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <include layout="@layout/piece_add_friday"
                android:id="@+id/add_includeFriday"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <include layout="@layout/piece_add_saturday"
                android:id="@+id/add_includeSaturday"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_btnSave"
            android:text="@string/save"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/add_llInfoDays"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
