<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:ems="10"
            android:text="@string/tut_header_text"
            android:textAlignment="center" />

        <Button
            android:id="@+id/tut_btn_video"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/tut_btn_video" />

        <Button
            android:id="@+id/tut_btn_slide"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="8dp"
            android:text="@string/tut_btn_slide" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>